# hop

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  build_msvc.bat  setup_dependencies.bat
.cache/clangd/index/: functions.c.D77B197F0BF56F3F.idx  functions.h.245C859B19EE1FDB.idx  hero.c.CB54AFBACD913C98.idx  hero.h.DE718344AD3DEA96.idx  main.c.EE14221F0421B392.idx  test.c.0C2CFC9F51167FE2.idx  vectors.c.4B1032B141EADDE5.idx  vectors.h.25E4EB9E5941E1AC.idx
src/: agent.c  agent.h  base.c  base.h  functions.c  functions.h  hero.c  hero.h  main.c  main_agent.c  main_agent.h  main_base.c  main_base.h  main_fire.c  main_fire.h  main_platform.c  main_platform.h  main_text.c  main_text.h  main_vectors.c  main_vectors.h  platform.c  platform.h  vectors.c  vectors.h
